# VitaConnectEverywhere

./: CMakeLists.txt  README.md  VitaConnectEverywhere.sh  VitaConnectEverywhere.yml
src/: file.c  file.h  ftpvita.c  ftpvita.h  main.c  main.h  package_installer.c  package_installer.h  pbp.c  pbp.h  pfs.c  pfs.h  refresh.c  refresh.h  sfo.c  sfo.h  sqlite3.h  thread.c  thread.h  utils.c  utils.h  vitashell_error.h  vitashell_user.h
src/modules/kernel/: CMakeLists.txt  exports.yml  main.c  vitashell_kernel.h
src/modules/patch/: CMakeLists.txt  exports.yml  main.c
src/modules/usbdevice/: CMakeLists.txt  exports.yml
src/modules/user/: CMakeLists.txt  exports.yml  main.c
